<resources>

    <!-- Application -->
    <string name="app_name">InCirkle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Drawer -->
    <string name="nav_header_picture">Display Picture</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">User ID</string>
    <string name="nav_menu_item_account">Account</string>
    <string name="nav_menu_item_logout">Logout</string>

    <!-- Home -->
    <string name="text_enrol_create_course">Enrol/Create Course</string>

    <!-- Login -->
    <string name="title_activity_login">Log in</string>
    <string name="button_login_email">Login via Email</string>
    <string name="button_login_phone">Login via Phone</string>

    <!-- Email Verification -->
    <string name="title_activity_loginViaEmail">Login via Email Address</string>
    <string name="prompt_email_address">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_sign_in">Sign In</string>

    <!-- Phone Login -->
    <string name="title_activity_loginViaPhone">Login via Phone Number</string>
    <string name="phone_country_code">+91</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_next">Next</string>

    <!-- Phone Verification -->
    <string name="title_activity_verifyPhone">Verify Phone Number</string>
    <string name="prompt_enter_code">Enter Code</string>
    <string name="prompt_continue">Continue</string>

    <!-- User Profile -->
    <string name="title_activity_userProfile">User Profile</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_gender">Gender</string>
    <string name="text_gender_male">Male</string>
    <string name="text_gender_female">Female</string>
    <string name="text_dob">Date of Birth</string>
    <string name="text_user_type">User Type</string>
    <string name="text_user_type_teacher">Teacher</string>
    <string name="text_user_type_student">Student</string>
    <string name="text_update_profile">Update Profile</string>

    <!-- Courses List -->
    <string name="text_course_code">Course Code</string>
    <string name="text_course_name">Course Name</string>
    <string name="text_latest_update">Latest Update</string>

    <!-- Select Organisation -->
    <string name="title_activity_selectOrganisation">Select Organisation</string>
    <string name="text_select_organisation">Select Organisation</string>
    <string name="text_create_organisation">Create Organisation</string>
    <string name="text_proceed">Proceed</string>

    <string name="text_organisation_name">Organisation Name</string>
    <string name="text_organisation_location">Location</string>

    <!-- Enrol Course -->
    <string name="title_activity_enrolCourse">Enrol Course</string>
    <string name="text_create_course">Create Course</string>

    <!-- Course Info -->
    <string name="title_activity_courseInfo">Course Info</string>
    <string name="text_course_password">Course Password</string>
    <string name="text_teacher_name">Teacher Name</string>
    <string name="text_teachingAssistants">Teaching Assistants</string>
    <string name="text_inviteStudents">Invite Students</string>
    <string name="text_timings">Timings</string>
    <string name="text_finish">Finish</string>

    <!-- Timing -->
    <string name="text_day">Day</string>
    <string name="text_startTime">Start Time</string>
    <string name="text_duration">Duration</string>
    <string name="text_endTime">End Time</string>

    <!-- General Purpose -->
    <string name="text_done">Done</string>
    <string name="text_delete">Delete</string>
    <string name="text_add">Add</string>

    <!-- Course Feed -->
    <string name="title_activity_course_feed">Course Feed</string>
    <string name="tab_activities">Activities</string>
    <string name="tab_forums">Forum</string>
    <string name="tab_documents">Documents</string>
    <string name="tab_assignments">Assignments</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="text_poster_name">Poster Name</string>
    <string name="text_timestamp">Timestamp</string>
    <string name="text_post">Post</string>

    <string name="text_title">Description</string>
    <string name="text_description">Description</string>

    <string name="text_name">Name</string>
    <string name="text_details">Details</string>

    <string name="text_dueDate">Due Date</string>
    <string name="text_date">Date</string>
    <string name="text_time">Time</string>

    <string name="text_select_attachment">Select Attachment</string>
    <string name="text_download_attachment">Attachment</string>

    <string name="text_content">Content</string>

    <string name="text_instructor">(Instructor)</string>

    <string name="text_submit_solution">Submit Solution</string>
    <string name="text_view_submitted_solution">View Submitted Solution</string>
    <string name="text_resubmit_solution">Re-Submit Solution</string>

    <string name="text_post_solution">Post Solution</string>
    <string name="text_view_solution">View Solution</string>
    <string name="text_attachment">Attachment</string>


    <string name="exception_msg">Kotlin file picker is not initialized with proper arguments</string>
    <string name="exception_msg_illegal_">File selection not supported</string>
    <string name="exception_msg_no_activity">No Activity found to handle Intent</string>
    <string name="dialog_finish_button">not now</string>
    <string name="dialog_settings_button">SETTINGS</string>
    <string name="dialog_permissions_message">Allow Application to access to  your device\'s photos, media and files. Tap settings > Permissions, and turn storage  on.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="solution_uploaded">Solution Uploaded Successfully</string>
    <string name="not_submitted_yet">Not submitted yet!</string>
    <string name="course_list">Course list</string>
    <string name="assignment_submisstion_list">Assignment submission list</string>
    <string name="cant_add_teaching_assistant">This user is already added as a student of this course</string>
    <string name="cant_add_student">This user is already added as a teaching assistant of this course</string>
    <string name="cant_add_self">Cannot add self</string>
    <string name="signup_for_teacher">Sign up for teacher</string>
    <string name="signup_for_student">Sign up for student</string>
    <string name="submit">Submit</string>
    <string name="signup">Sign up</string>

</resources>
