<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Fragments.CourseDocumentsFragment">

    <LinearLayout
            android:id="@+id/layout_post_document_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

        <EditText
                android:id="@+id/editText_post_document_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/text_name"/>

        <EditText
                android:id="@+id/editText_post_document_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/text_details"/>

        <Button
                android:id="@+id/button_document_selectAttachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_select_attachment" />

        <Button
                android:id="@+id/button_post_document"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_post" />

    </LinearLayout>

    <ListView
            android:id="@+id/listView_courseFeed_documents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

</LinearLayout>