<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".Activities.LoginActivity"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="4"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="30sp"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/button_login_email"
            android:onClick="emailLogin" />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login_phone"
            android:onClick="phoneLogin"/>

</LinearLayout>