<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Add Document"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/editText_post_document_name_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/text_name"/>

    <EditText
            android:id="@+id/editText_post_document_description_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/text_description"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/button_document_selectAttachment_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/text_select_attachment" />

        <Button
                android:id="@+id/button_document_forum_add"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:text="@string/text_post" />

    </LinearLayout>

</LinearLayout>