<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".Activities.UserProfileActivity">

    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/title_activity_userProfile"
                android:background="?attr/colorPrimary"/>
    </android.support.design.widget.AppBarLayout>


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <!-- Diplay Picture -->

            <ImageButton
                    android:id="@+id/displayPictureImageButton"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:onClick="changeDisplayPicture"

            />

            <!-- First Name -->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/text_first_name"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                <AutoCompleteTextView
                        android:id="@+id/editText_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>
            </LinearLayout>

            <!-- Last Name -->

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/text_last_name"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                <AutoCompleteTextView
                        android:id="@+id/editText_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>
            </LinearLayout>

            <!-- Gender -->

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/text_gender"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                <RadioGroup
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:checkedButton="@id/radioButton_male"
                        android:orientation="horizontal">

                    <RadioButton
                            android:id="@+id/radioButton_male"
                            android:text="@string/text_gender_male"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                    <RadioButton
                            android:id="@+id/radioButton_female"
                            android:text="@string/text_gender_female"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>
                </RadioGroup>
            </LinearLayout>

            <!-- User Type -->

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/text_user_type"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                <RadioGroup
                        android:id="@+id/type"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:checkedButton="@id/radioButton_teacher"
                        android:orientation="horizontal">

                    <RadioButton
                            android:id="@+id/radioButton_teacher"
                            android:text="@string/text_user_type_teacher"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                    <RadioButton
                            android:id="@+id/radioButton_student"
                            android:text="@string/text_user_type_student"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>
                </RadioGroup>
            </LinearLayout>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_update_profile"
                    android:onClick="updateProfile" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>