<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="80dp">

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_height="50dp"
            android:layout_width="match_parent">

        <TextView
                android:id="@+id/textView_course_code"
                android:layout_height="match_parent"
                android:layout_width="75dp"
                android:layout_gravity="start"
                android:text="@string/text_course_code"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="start|center_vertical"/>

        <TextView
                android:id="@+id/textView_course_name"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_gravity="end"
                android:text="@string/text_course_name"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="start|center_vertical"/>

    </LinearLayout>

    <TextView
            android:id="@+id/textView_latest_update"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/text_latest_update"
            android:gravity="start|center_vertical"/>

</LinearLayout>