<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Activities.LoginPhoneActivity">

    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/title_activity_loginViaPhone"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/phone_country_code"
                android:layout_gravity="center"
                android:gravity="center"
                />

        <AutoCompleteTextView
                android:id="@+id/editText_phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_phone"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"/>

    </LinearLayout>

    <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_next"
            android:enabled="false"
            android:onClick="getCode"/>

    <ProgressBar
            android:id="@+id/progressBar_get_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

</LinearLayout>