<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#f5f5f5"
        tools:context=".Fragments.CourseAssignmentsFragment">

    <LinearLayout
            android:id="@+id/layout_post_assignment_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

        <EditText
                android:id="@+id/editText_post_assignment_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/text_name"/>

        <EditText
                android:id="@+id/editText_post_assignment_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/text_details"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

            <TextView
                    android:id="@+id/textView_post_assignment_dueDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/text_dueDate"/>

            <Button
                    android:id="@+id/button_post_assignment_dueDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/text_date"/>

            <Button
                    android:id="@+id/button_post_assignment_dueTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/text_time"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/button_assignment_selectAttachment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/text_select_attachment" />

            <Button
                    android:id="@+id/button_post_assignment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:text="@string/text_post" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.CardView
            android:id="@+id/card_view_createforum_assignment"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:contentPadding="4dp">


        <LinearLayout
                android:id="@+id/layout_create_assignment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">



            <ImageView
                    android:id="@+id/imageview_profileimage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:src="@mipmap/ic_launcher"/>

            <TextView
                    android:id="@+id/textview_create_assignment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/material_grey500"
                    android:text="Create an Assignment"
                    android:layout_gravity="center"
                    android:gravity="start"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ListView
            android:id="@+id/listView_courseFeed_assignments"
            android:divider="@android:color/transparent"
            android:dividerHeight="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

</LinearLayout>